<resources>
    <string name="app_name">MVVMLiveDataKotlin</string>
    <string name="sumar_viewmodel">Sumar ViewModel</string>
    <string name="user_viewmodel">User ViewModel</string>
    <string name="live_data">Live Data</string>
    <string name="databinding">DataBinding</string>
    <string name="databinding_livedata">DataBinding LiveData</string>
    <string name="sumar">Sumar</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="salvar">Salvar</string>
    <string name="ver">Ver</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar_user">Actualizar User</string>
    <string name="visibilidad">Visibilidad</string>
</resources>