<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <EditText
        android:hint="@string/nombre"
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:hint="@string/edad"
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="@+id/etNombre"/>

    <Button
        android:text="@string/salvar"
        android:id="@+id/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etEdad"
        app:layout_constraintEnd_toEndOf="@+id/etEdad"
        app:layout_constraintStart_toStartOf="@+id/etEdad"/>

    <Button
        android:text="@string/ver"
        android:id="@+id/btVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btSalvar"
        app:layout_constraintEnd_toEndOf="@+id/btSalvar"
        app:layout_constraintStart_toStartOf="@+id/btSalvar"/>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btVer"
        app:layout_constraintEnd_toEndOf="@+id/btVer"
        app:layout_constraintStart_toStartOf="@+id/btVer"/>

    <TextView
        android:id="@+id/tvUserViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"
        app:layout_constraintEnd_toEndOf="@+id/tvUser"
        app:layout_constraintStart_toStartOf="@+id/tvUser"/>

</androidx.constraintlayout.widget.ConstraintLayout>
